<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ui.views.fragments.ProfileFragment">

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/person_image_profile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/bot_nav_profile"
            android:src="@drawable/ic_person"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/profile_login"
            app:endIconDrawable="@drawable/ic_login"
            app:endIconMode="custom"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck,DuplicateSpeakableTextCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/profile_password"
            app:endIconMode="password_toggle"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColorHint="#546E7A"
                tools:ignore="VisualLintTextFieldSize,TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:hint="@string/profile_login"
            android:layout_gravity="center"
            tools:ignore="VisualLintButtonSize"
            />

    </LinearLayout>

</ScrollView>